tests/ui/implied-bounds/implied-bounds-on-external-params-2.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/implied-bounds-on-external-params-2.rs:47:13
   |
LL |     let c = move || {
   |             ^^^^^^^
   |             |
   |             the parameter type `T` must be valid for the static lifetime...
   |             ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn extend<T: StaticToStatic + 'static>(x: T) -> &'static Payload {
   |                             +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
